# Stock-Analysis

./: .gitignore  README.md  pyproject.toml
config/: hermes_agent.json  pipeline.json  schema_registry.json  sources.json
docs/: 00_文档索引.md  01_项目总览与阶段结论.md  02_项目整体设计.md  03_数据契约与命名规范.md  04_基础变量与Phase2总结.md  05_衍生变量Phase3总览.md  06_Phase3模块设计合订本.md  07_运行维护与数据字典.md  08_审计验收与遗留事项.md  09_Phase4启动审计与实施计划.md  10_统一出口视图设计.md  11_Phase4增量窗口与脚本分类.md  12_Phase5验证文档交付闭环设计.md  13_AgentSkill运行手册与自动报告设计.md  14_运行手册.md  base_variable_coverage_review.md  data_contract.md  generated_schema_dictionary.md  generated_source_dictionary.md  generated_variable_dictionary.md  phase0_confirmation.md  phase1_summary.md  phase2_continuous_run_summary.md  phase2_contract_gap_review.md  phase2_quality_and_views.md  phase2_start_summary.md  phase3_core_derived_plan.md  phase3_daily_spine_design.md  rebuild_plan.md  tushare_api_feasibility_20260527.md
reports/: audit_fix_post_20260608.json  audit_fix_post_20260608.md  audit_fix_pre_20260608.json  audit_fix_pre_20260608.md  audit_report_20260530.md  audit_report_20260530_assessment.md  daily_2026-06-08.json  daily_2026-06-08.md  daily_2026-06-08_postcheck.json  daily_2026-06-08_postcheck.md  daily_2026-06-08_precheck.json  daily_2026-06-08_precheck.md  daily_2026-06-09.json  daily_2026-06-09.md  daily_2026-06-09_postcheck.json  daily_2026-06-09_postcheck.md  daily_2026-06-09_precheck.json  daily_2026-06-09_precheck.md  daily_2026-06-10.json  daily_2026-06-10.md  daily_2026-06-10_postcheck.json  daily_2026-06-10_postcheck.md  daily_2026-06-11.json  (+163 more)
(+218 files in other folders)
