[project]
name = "stock-maintainance"
version = "0.1.0"
description = "A-share stock data maintenance project"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0.0",
    "pandas>=2.0.0",
    "tushare>=1.4.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
stock-maintain = "stock_maintainance.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
